--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>janken project</title>
     <link rel="stylesheet" href="style.css">
-    <script src="java.js"></script>
   </head>
-  <body>
+<body>
+<h1>USER: <span id="user-choice"></span></h1><span id="user-score">0</span>
+<h1>COMPUTER: <span id="computer-choice"></span></h1><span id="computer-score">0</span>
+<h1>RESULT: <span id="result"></span></h1>  
+<script src="java.js"></script>
+</body>
 
-  </body>
 </html>
